Project-wide tweaks
- Replaces Markdown paragraphs split across multiple lines with single-line ones
- Adds a license file (and state it on readme.md)
- Removes my second first name, leaving only my very first and last names

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "knowledge",
   "version": "1.0.0",
-  "description": "knowledge, a book by Joel Wallis Jucá",
+  "description": "knowledge, a book by Joel Jucá",
   "author": "Joel Wallis Jucá <joelwallis@gmail.com>",
   "repository": "joelwallis/knowledge",
   "homepage": "https://knowledge.joelwallis.com/",
