--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-command = "cargo install mdbook && mdbook build"
+command = "rustup toolchain install stable; cargo install mdbook && mdbook build"
 publish = "book/"
